[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Ty Schlichenmeyer <tyschlich@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.4.5"
coreapi = "^2.3.3"
djangorestframework = "^3.13.1"
Faker = "^14.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
